buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        // O driver JDBC para falar com o seu Neon
        classpath 'org.postgresql:postgresql:42.7.3' 
        // O módulo do Postgres pro Flyway 12+ que o plugin precisa conhecer
        classpath 'org.flywaydb:flyway-database-postgresql:12.6.1' 
    }
}

plugins {
  id 'java'
  id 'org.jetbrains.kotlin.jvm' version '2.3.0'
  id 'org.jetbrains.kotlin.plugin.spring' version '2.3.0'
  id 'org.jetbrains.kotlin.plugin.jpa' version '2.3.0'
  // Atualizado para 3.5.14 para melhor sinergia com Java 25
  id 'org.springframework.boot' version '3.5.14'
  id 'io.spring.dependency-management' version '1.1.7'
  id 'org.flywaydb.flyway' version '12.6.1'
}

flyway {
  url = System.getenv('FLYWAY_URL')
  if (System.getenv('FLYWAY_USER') != null) {
    user = System.getenv('FLYWAY_USER')
  }
  if (System.getenv('FLYWAY_PASSWORD') != null) {
    password = System.getenv('FLYWAY_PASSWORD')
  }
  baselineOnMigrate = true
}

group = 'com.agendarpgadmin'
version = '0.0.1-SNAPSHOT'

java {
  toolchain {
    // A fera que instalamos via SDKMAN
    languageVersion = JavaLanguageVersion.of(25)
  }
}

configurations {
  compileOnly {
    extendsFrom annotationProcessor
  }
}

repositories {
  mavenCentral()
}

dependencies {
  // Spring Boot Starters
  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
  implementation 'org.springframework.boot:spring-boot-starter-web'
  implementation 'org.springframework.boot:spring-boot-starter-security'
  implementation 'org.springframework.boot:spring-boot-starter-mail'
  implementation 'org.springframework.boot:spring-boot-starter-data-redis'

  // Kotlin
  implementation 'org.jetbrains.kotlin:kotlin-reflect'
  implementation 'org.jetbrains.kotlin:kotlin-stdlib'
  implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'

  // Banco de Dados e Migrations
  implementation 'org.flywaydb:flyway-core'
  implementation 'org.flywaydb:flyway-database-postgresql'
  runtimeOnly 'org.postgresql:postgresql'
  
  // JWT (Mantive a 0.11.5 para não quebrar sua implementação atual)
  implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
  implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
  implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
  
  // BouncyCastle e Spring Security Crypto para Argon2
  implementation 'org.bouncycastle:bcprov-jdk18on:1.76'
  implementation 'org.springframework.security:spring-security-crypto'

  // Logging e Auxiliares
  implementation 'org.jboss.logging:jboss-logging:3.5.0.Final'
  implementation 'org.hibernate.common:hibernate-commons-annotations:6.0.6.Final'
  implementation 'com.fasterxml:classmate:1.5.1'
  implementation 'org.glassfish.jaxb:jaxb-runtime:4.0.5'

  // O Reforço do Time: Lombok 1.18.46 (Blindado contra Java 25)
  compileOnly 'org.projectlombok:lombok:1.18.46'
  annotationProcessor 'org.projectlombok:lombok:1.18.46'
  
  // UUID v7 Generator (Standard for Java 25)
  implementation 'com.github.f4b6a3:uuid-creator:6.0.0'

  // Lombok para os Testes (Importante para evitar erros de inicialização)
  testCompileOnly 'org.projectlombok:lombok:1.18.46'
  testAnnotationProcessor 'org.projectlombok:lombok:1.18.46'

  // Testes
  testImplementation 'org.springframework.boot:spring-boot-starter-test'
  testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

  // Observabilidade (OpenTelemetry, Actuator, Micrometer)
  implementation 'org.springframework.boot:spring-boot-starter-actuator'
  implementation 'io.micrometer:micrometer-tracing-bridge-otel'
  implementation 'io.opentelemetry:opentelemetry-exporter-otlp'
  implementation 'io.micrometer:micrometer-registry-prometheus'
}

tasks.named('test') {
  useJUnitPlatform()
}